# jerome

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt  collection.dtd  uncrustify.cfg
Configurations/: 3rdParty.xcconfig  App.mac.xcconfig  App.xcconfig  Debug.xcconfig  Framework.ios.xcconfig  Framework.mac.xcconfig  Framework.xcconfig  Project.xcconfig  Release.xcconfig  ios.xcconfig  mac.xcconfig
Framework/: ALClassifierBridge.h  ALClassifierBridge.mm  ALEngine.h  ALEngine.mm  ALPlatform.h  ALPlatform.mm  ALUtterance.h  ALUtterance.mm  ALUtterance.private.h  Classifier.swift  DialogueManager.swift  EngineAdapter.swift  Info.plist  Jerome.h  JeromeLogging.swift  Macros.h  ObjectiveC++.h  ObjectiveC++.mm  Scion.h  Scion.m  ScionPlatform.swift  UtteranceIdentifier.swift  model.h  model.mm  model_private.h  module.modulemap
Jerome.ios/: Jerome.h
Jerome.iosTests/: Jerome_iosTests.swift
Jerome4Java/cpp/: jerome_Jerome.cpp  jerome_Jerome.h  jerome_Jerome_Completion.cpp  jerome_Jerome_Completion.h  jerome_Jerome_ModelLoaderCallback.h  jerome_Jerome_ResponseCallback.h  jerome_NativePointer.h  jerome_Utterance.cpp  jerome_Utterance.h  jni_utilities.cpp  jni_utilities.hpp  model.cpp  model.hpp
Jerome4Java/java/: JavaJerome.ipr
examples/data/: dm.scxml  twins.plist.csxml
examples/objc/: ALChatEngine.h  ALChatEngine.mm
examples/simple_jerome/: main.cpp
examples/vhmsg_jerome/: VHMSG.cpp  VHMSG.hpp  VHMSGHandler.hpp  main.cpp  vrExpress.cpp  vrExpress.hpp
jerome/: async.cpp  async.hpp  async_boost.hpp  async_gcd.hpp  logger.cpp  logger.hpp  types.cpp  types.hpp
jerome.osx Tests/: classifier_Tests.mm  jerome.osx Tests-Prefix.pch  jerome_osx_Tests.mm  logger_Tests.mm
jerome.xcodeproj/: project.pbxproj
jerome.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
jerome.xcodeproj/project.xcworkspace/xcshareddata/: IDETemplateMacros.plist  alib.xccheckout  alib.xcscmblueprint  jerome.xcscmblueprint
jerome.xcodeproj/xcshareddata/: IDETemplateMacros.plist
jerome.xcodeproj/xcshareddata/xcschemes/: 3rdParty.xcscheme  Jerome4Java.xcscheme  jerome.ios.xcscheme  jerome.osx.xcscheme  jerome.xcscheme  jerome_tool.xcscheme  libjerome.ios.xcscheme  libjerome.osx.xcscheme  libjerome.xcscheme  simple_jerome.xcscheme  vhmsg_jerome.xcscheme
jerome/ir/: analysis.hpp  collection.cpp  collection.hpp  distances.hpp  evaluation.hpp  lookup.hpp  parsing.hpp  ranker.hpp
jerome/ir/collection/: dictionary.cpp  dictionary.hpp  field.hpp  file_index.cpp  file_index.hpp  heap_index.hpp  index.hpp  persistence_containers.hpp  term.hpp
jerome/ir/evaluation/: DataSetEntry.hpp  DataSetEvaluator.hpp  DataSetEvaluator_opencl.hpp  EvaluatorObjectiveFunction.hpp  Relevance.hpp
jerome/ir/parsing/: filters.hpp  irregular_verbs.cpp  irregular_verbs.hpp  locale.hpp  parsing.cpp  parsing_cf.cpp  parsing_cf.hpp  parsing_fwd.hpp  parsing_icu.cpp  parsing_icu.hpp  parsing_pipes.hpp  parsing_std.cpp  parsing_std.hpp  stream.hpp  token.hpp
jerome/ir/report/: HTMLReporter.cpp  HTMLReporter.hpp  HTMLReporter.xslt  Reporter.hpp  XMLReporter.cpp  XMLReporter.hpp
jerome/ir/rm/: AnyWeighting.hpp  distances_in_answer_space.hpp  distances_in_mixed_space.hpp  rm.hpp  weighting.cpp  weighting.hpp
jerome/ir/training/: Data.hpp  TestSet.hpp  TestSetOne.hpp  Trainer.cpp  Trainer.hpp
jerome/math/: functions.hpp  matrix_functions.hpp  scored.hpp
jerome/math/parameters/: domain.hpp  parameterized.hpp  parameters.cpp  types.hpp
jerome/npc/: EngineEvent.hpp  TrainingCallback.hpp  engine.cpp  engine.hpp  model.cpp  model.hpp  model_cpp.cpp  model_cpp.hpp  model_fwd.hpp  npc.hpp  parsing.cpp  parsing.hpp  platform.cpp  platform.hpp
jerome/npc/detail/: JavaScriptEngineInterface.cpp  JavaScriptEngineInterface.hpp  ModelIO.hpp  ModelReader.cpp  ModelReader.hpp  ModelReaderCSV.cpp  ModelReaderCSV.hpp  ModelReaderTable.cpp  ModelReaderTable.hpp  ModelReaderXML.cpp  ModelReaderXML.hpp  ModelWriter.cpp  ModelWriter.hpp  ModelWriterText.cpp  ModelWriterText.hpp  ModelWriterXML.cpp  ModelWriterXML.hpp  Ranker.cpp  Ranker.hpp  Ranker_impl.hpp  Trainer.cpp  Trainer.hpp  evaluation.cpp  evaluation.hpp  model_impl.cpp  model_impl.hpp  types_fwd.hpp
jerome/npc/factories/: AnalyzerFactory.cpp  AnalyzerFactory.hpp  RankerFactory.cpp  RankerFactory.hpp  RecordFactory.hpp  ReporterFactory.cpp  ReporterFactory.hpp  TrainerFactory.cpp  TrainerFactory.hpp  WeightingFactory.cpp  WeightingFactory.hpp
jerome/scripting/: EngineEvent.hpp  JavaScriptEngineInterface.cpp  PlatformJSInterface.cpp  PlatformJSInterface.hpp  async_js.cpp  async_js.hpp  javascript.hpp  js_engine.cpp  js_engine.hpp  npc_model.cpp  npc_model.hpp  scion.cpp  scion.hpp  scion.tests.js  scripts.cpp  scripts.hpp  startup.js  utteranceCompiler.js
jerome/scripting/javascript/: abstract_value.hpp  class.hpp  class_traits.hpp  context.hpp  conversion.hpp  exception.hpp  string.hpp  (+3 more)
jerome/type/: EigenSparseVectorPlugin.hpp  Factory.hpp  FunctionSignature.hpp  Record.hpp  algorithm.hpp  error.cpp  error.hpp  filesystem.hpp  macros.hpp  matrix.cpp  matrix.hpp  matrix_boost.hpp  matrix_eigen.hpp  matrix_eigen_sparse_vector_plugin.hpp  meta.hpp  optional.hpp  ordered_multimap.hpp  persistence.hpp  random.hpp  regex.hpp  shared.hpp  shared_containers.hpp  sparse_vector.hpp  string.cpp  string.hpp
jerome/xml/: document.cpp  document.hpp  reader.cpp  reader.hpp  record_writer.cpp  record_writer.hpp  stylesheet.cpp  stylesheet.hpp  writer.cpp  writer.hpp  writer_manip.hpp  xml_fwd.hpp
jerome_tool/: ClassifierCommand.cpp  ClassifierCommand.hpp  Command.cpp  Command.hpp  Evaluate.cpp  Evaluate.hpp  Help.cpp  Help.hpp  Info.cpp  Info.hpp  PlatformCommand.cpp  PlatformCommand.hpp  Split.cpp  Split.hpp  Train.cpp  Train.hpp  main.cpp  split.private.hpp
libjerome.osx.tests/: csv_tests.mm  dictionary_Tests.mm  libjerome_osx_tests.m  parsing_Tests.mm
scripts/: compile_boost.sh  compile_eigen.sh  compile_nlopt.sh  copy_3rdParty_libs.sh  copy_headers.sh  copyright.txt  make_all.sh  make_includes.sh  update_copyright.sh  update_header_define.sh
(+80 files in other folders)
